# ElegooRemoteControl

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  SaturnControl.code-workspace  backend.cpp  backend.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.h  readme.md  release.yml  resources.qrc  translations.qrc
.github/workflows/: release.yml
packaging/: default.desktop
translations/: saturn_es.ts
